[tool.poetry]
name = "project2"
version = "0.1.0"
description = "Software Engineering project regarding giphys and APIkeys"
authors = ["akimrey <akimrey@unca.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
